fonts + fixed project page alignment issues

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 
 body {
     background-color: #fff;
-    font-family: sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
     font-size: 14px;
 }
 
@@ -39,13 +39,14 @@ a:hover {
 #header {
     padding: 1.25em 0 35px 0;
     font-size: 2.75em;
+    font-family: 'Open Sans', sans-serif;
     font-weight: bold;
     color: #fff;
     text-align: center;
 }
 
 #header span {
-    padding: 10px 15px;
+    padding: 10px 20px;
     background-color: #4f697d;
 }
 
@@ -103,6 +104,7 @@ a:hover {
 
 .project-container {
     display: grid;
+    padding-top: 20px;
     grid-template-columns: 50% 50%;
     grid-template-rows: 300px 300px;
 }
@@ -113,11 +115,13 @@ a:hover {
 }
 
 .project-image {
-    padding: 0 15%;
+    justify-items: end;
+    align-items: center;
+    padding-right: 10%;
 }
 
 .project-image img {
-    width: 100%;
+    height: 90%;
     grid-row-start: 1;
     grid-column-start: 1;
 }
@@ -132,7 +136,7 @@ a:hover {
 }
 
 .project-desc {
-    padding-right: 15%;
+    padding: 0 15% 0 10%;
     line-height: 1.5em;
 }
 
